--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,7 +5,7 @@ description: Learn how to create graphics with code in Processing
 original_url: https://raspberrypi.org/learning/introduction-to-processing
 theme: red
 duration: 2
-listed: true
+listed: false
 ingredient: false
 copyedit: true
 curriculum: 2, design-0, programming-2, phys-comp-1, manufacture-0, community-0
